--- a/views/home.ejs
+++ b/views/home.ejs
@@ -75,26 +75,29 @@
                 </button> -->
             </div>
         </div>
-        
+
 
     </div>
 
 </section>
 <section id="about-me">
     <div class="wrapper">
-        <div class="heading-wrapper">
+        <!-- <div class="heading-wrapper">
             <h1 class="heading">About me</h1>
             <div class="primary-rule"></div>
             <div class="secondary-rule"></div>
-        </div>
+        </div> -->
         <div class="about-container">
-            <div class="about-img">
-                <div class="banner">
+            <div class="about-left">
+                <div class="about-us-text">
+                    <div>
+                        <h3>About</h3>
+                        <h3>Me</h3>
+                    </div>
                 </div>
-                <div class="banner-text">
-                    <h2>At Creative Lite Studios, we offer you the best!</h2>
-                </div>
-                <!-- <img src="../images/about-image.jpeg" alt="about-img"> -->
+                <img class="about-left-image1" src="../images/graphic-design.jpeg" alt="about-us">
+                <img class="about-left-image2" src="../images/graphic-design.jpeg" alt="about-us">
+
             </div>
             <div class="about-content">
                 <h1>Get to Know me</h1>
@@ -110,11 +113,7 @@
                 <a href="/resume" class="btn primary about-btn" role="button">resume
                 </a>
             </div>
-            <div class="pattern-center"></div>
         </div>
-
-        <!-- <div class="pattern-bottom"></div>
-    <div class="pattern-top"></div> -->
 
     </div>
 
@@ -239,27 +238,28 @@
             <div class="skills-img-right">
                 <div class="skills-why-choose-me">
                     <h2>Why Choose Creative Lite</h2>
-                    <p>Creative Lite Studios is the most trusted source for graphic designs online. We invented design contests and have been growing and improving our platform ever since. We offer:</p>
+                    <p>Creative Lite Studios is the most trusted source for graphic designs online. We invented design
+                        contests and have been growing and improving our platform ever since. We offer:</p>
                     <div class="skills-why-choose-me-wrapper">
                         <div>
                             <i class="far fa-check-circle"></i>
-                            <p>Professional designers that are hand-vetted for quality</p> 
-                          </div>
-                          <div class="padding-top-bottom">
-                              <i class="far fa-check-circle"></i>
-                              <p>Professional designers that are hand-vetted for quality</p> 
-                          </div>
-                          <div class="padding-top-bottom">
-                              <i class="far fa-check-circle"></i>
-                              <p>Professional designers that are hand-vetted for quality</p> 
-                          </div>
-                          <div>
-                              <i class="far fa-check-circle"></i>
-                              <p>Professional designers that are hand-vetted for quality</p> 
-                          </div>
+                            <p>Professional designers that are hand-vetted for quality</p>
+                        </div>
+                        <div class="padding-top-bottom">
+                            <i class="far fa-check-circle"></i>
+                            <p>Professional designers that are hand-vetted for quality</p>
+                        </div>
+                        <div class="padding-top-bottom">
+                            <i class="far fa-check-circle"></i>
+                            <p>Professional designers that are hand-vetted for quality</p>
+                        </div>
+                        <div>
+                            <i class="far fa-check-circle"></i>
+                            <p>Professional designers that are hand-vetted for quality</p>
+                        </div>
 
                     </div>
-                    
+
                 </div>
                 <!-- <div class="project-count">
                     <h1>250+ <br> Projects!</h1>
@@ -304,7 +304,7 @@
             </div>
 
         </div> -->
-        
+
     </div>
 </section>
 
@@ -534,41 +534,22 @@
             </button>
         </div>
     </div>
-    
+
 
 </section>
 
 <section id="contact">
     <div class="wrapper">
-        <div class="contact-container">
-            <div class="contact-main">
-                <div class="address">
-                    <div>
-                        <h4>Email</h4>
-                        <a href="#">paullite@gmail.com</a>
-                    </div>
-                    <div>
-                        <h4>Phone</h4>
-                        <p>+456782791819</p>
-                    </div>
-                    <div>
-                        <h4>ADDRESS</h4>
-                        <P>83 Fort street Belington Mourough <br>
-                            0018000-207-4421, United Kingdom.
-                        </P>
-                    </div>
-                </div>
-                <div class="social">
-                    <ul>
-                        <li><i class="fab fa-linkedin-in"></i><a href="#">Linkedin</a></li>
-                        <li><i class="fas fa-basketball-ball"></i><a href="#">Dribble</a></li>
-                        <li><i class="fab fa-whatsapp-square"></i><a href="#">whats app</a></li>
-                        <li><i class="fab fa-instagram"></i><a href="#">instagram</a></li>
-                        <li><i class="fab fa-facebook-square"></i><a href="#">facebook</a></li>
-                        <li><i class="fab fa-linkedin-in"></i><a href="#">linkedin</a></li>
-                    </ul>
-                </div>
+        <div class="social">
+            <h3>Get in touch</h3>
+            <div>
+                <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                <a href="#"><i class="fas fa-basketball-ball"></i></a>
+                <a href="#"><i class="fab fa-whatsapp-square"></i></a>
+                <a href="#"><i class="fab fa-instagram"></i></a>
+                <a href="#"><i class="fab fa-facebook-square"></i></a>
             </div>
+
         </div>
         <hr>
         <footer>
