--- a/views/home.ejs
+++ b/views/home.ejs
@@ -554,9 +554,7 @@
         <hr>
         <footer>
             <div class="copyright">
-                <p class="copyright">© Copyright <span class="year"></span>|<a href="/">Creative Lite Studios</a>|
-                    Privacy
-                </p>
+                <p class="copyright">© Copyright <span class="year"></span>|<a href="/">Creative Lite Studios</a>| Privacy</p>
                 <p class="designed-by"><i class="fas fa-code"></i> with <i class="fas fa-heart"></i> by O.J. Tabi</p>
 
             </div>
