--- a/views/resume.ejs
+++ b/views/resume.ejs
@@ -34,11 +34,11 @@
                 </a>
             </div>
             <ul class="nav_links">
-                <li class="nav_link active header"><a href="/">Home</a></li>
-                <li class="nav_link about-me"><a href="/">About</a></li>
-                <li class="nav_link portfolio"><a href="/">Portfolio</a></li>
+                <li class="nav_link active header"><a href="/#header">Home</a></li>
+                <li class="nav_link about-me"><a href="/#about-me">About</a></li>
+                <li class="nav_link portfolio"><a href="/#portfolio">Portfolio</a></li>
                 <li class="nav_link resume"><a href="/resume">Resume</a></li>
-                <li class="nav_link contact"><a href="/">Contact</a></li>
+                <li class="nav_link contact"><a href="/#contact">Contact</a></li>
             </ul>
             <div class="burger">
                 <div class="line1"></div>
@@ -63,7 +63,7 @@
         <div class="profile-card">
           <h2 class="profile-card-title">Something awesome</h2>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-          <a href="#portfolio" class="btn work profile-card-btn" role="button">view portfolio
+          <a href="/#portfolio" class="btn work profile-card-btn" role="button">view portfolio
           </a>
         </div>
 
