fix call to action text

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -528,7 +528,8 @@
         </div>
 
         <div class="call-to-action">
-            <h2>Are you interested in what you see? Let us get to work and build your brand together!</h2>
+            <h2>Interested in building your brand with us? <br> Let's make it happen.</h2>
+            
             <button class="cta-btn btn about-btn">
                 Let's talk <i class="fas fa-long-arrow-alt-right"></i>
             </button>
