--- a/public/Css/styles.css
+++ b/public/Css/styles.css
@@ -1517,11 +1517,14 @@ a.work:hover {
     position: absolute;
     bottom: -9rem;
     display: flex;
-    justify-content: space-around;
+    width: 100%;
+    justify-content: space-between;
     align-items: center;
     padding: 1.5rem 4rem;
     background-color: var(--mainWhite);
     border-radius: 10px;
+    line-height: 1.5;
+    font-weight: 400;
     color: var(--primaryColor);
 }
 
