work on resume ui

--- a/views/resume.ejs
+++ b/views/resume.ejs
@@ -33,7 +33,7 @@
 
 <body>
   <nav class="navigation">
-    <div class="wrapper">
+    <div class="wrapper resume-wrapper">
       <div class="logo-container">
         <a href="/">
           <img class="logo" src="../images/main-logo.png" alt="logo">
@@ -55,7 +55,8 @@
 
   </nav>
   <section id="resume">
-    <div class="wrapper">
+    <div class="resume-wrapper">
+      <button class="btn primary go-back">Go back</button>
       <div class="resume-grid">
         <div class="resume-bio">
           <div class="image">
@@ -170,114 +171,112 @@
             </div>
           </div>
         </div>
+        <div class="eduandwork">
+          <div class="work-experience">
+            <h2 class="right-heading"><i class="fas fa-briefcase"></i>Work Experience</h2>
+            <div class="inner-content">
+              <div>
+                <h4>Senior Graphic Designer / Lorem Company Buea</h4>
+                <h5 class="time-frame"><i class="fas fa-calendar-alt"></i>2016-2018</h5>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique corporis rerum hic, reiciendis
+                  deserunt aliquid commodi temporibus delectus illum. Eveniet expedita ipsa magni quisquam quidem
+                  perferendis officiis tempore nisi dolorem.</p>
+                <hr>
+              </div>
+              <div>
+                <h4>Senior Graphic Designer / Lorem Company Buea</h4>
+                <h5 class="time-frame"><i class="fas fa-calendar-alt"></i>2016-2018</h5>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique corporis rerum hic, reiciendis
+                  deserunt aliquid commodi temporibus delectus illum. Eveniet expedita ipsa magni quisquam quidem
+                  perferendis officiis tempore nisi dolorem.</p>
+                <hr>
+              </div>
+              <div>
+                <h4>Senior Graphic Designer / Lorem Company Buea</h4>
+                <h5 class="time-frame"><i class="fas fa-calendar-alt"></i>2016-2018</h5>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique corporis rerum hic, reiciendis
+                  deserunt aliquid commodi temporibus delectus illum. Eveniet expedita ipsa magni quisquam quidem
+                  perferendis officiis tempore nisi dolorem.
+                </p>
+                <hr>
+              </div>
+              <div>
+                <h4>Senior Graphic Designer / Lorem Company Buea</h4>
+                <h5 class="time-frame"><i class="fas fa-calendar-alt"></i>2016-2018</h5>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique corporis rerum hic, reiciendis
+                  deserunt aliquid commodi temporibus delectus illum. Eveniet expedita ipsa magni quisquam quidem
+                  perferendis officiis tempore nisi dolorem.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="education">
+            <h2 class="right-heading"><i class="fas fa-school"></i>Education</h2>
+            <div class="inner-content">
+              <div>
+                <h4>Senior Graphic Designer / Lorem Company Buea</h4>
+                <h5 class="time-frame"><i class="fas fa-calendar-alt"></i>2016-2018</h5>
+                <p>Masters in Microbiology</p>
+                <hr>
+              </div>
+              <div>
+                <h4>Senior Graphic Designer / Lorem Company Buea</h4>
+                <h5 class="time-frame"><i class="fas fa-calendar-alt"></i>2016-2018</h5>
+                <p>Masters in Microbiology</p>
+                <hr>
+              </div>
+              <div>
+                <h4>Senior Graphic Designer / Lorem Company Buea</h4>
+                <h5 class="time-frame"><i class="fas fa-calendar-alt"></i>2016-2018</h5>
+                <p>Masters in Microbiology</p>
+                <hr>
+              </div>
+            </div>
 
-        <div class="work-experience">
-          <h2 class="about-designer">Work Experience</h2>
-          <div class="line-container">
-            <div class="line-inner"></div>
-          </div>
-          <div class="inner-content">
-            <div>
-              <h4>Lorem Company Buea</h4>
-              <p>2016-2018</p>
-            </div>
-            <div>
-              <h4>Senior Graphic Designer</h4>
-              <p>amet, consectetur adipiscing adipiscing elit. Lorem ipsum dolor</p>
-            </div>
-            <div>
-              <h4>Lorem Company Buea</h4>
-              <p>2016-2018</p>
-            </div>
-            <div>
-              <h4>Senior Graphic Designer</h4>
-              <p>amet, consectetur adipiscing adipiscing elit. Lorem ipsum dolor</p>
-            </div>
-            <div>
-              <h4>Lorem Company Buea</h4>
-              <p>2016-2018</p>
-            </div>
-            <div>
-              <h4>Senior Graphic Designer</h4>
-              <p>amet, consectetur adipiscing adipiscing elit. Lorem ipsum dolor</p>
-            </div>
-          </div>
-        </div>
-        <div class="education">
-          <h2 class="about-designer">Education</h2>
-          <div class="line-container">
-            <div class="line-inner"></div>
-          </div>
-          <div class="inner-content">
-            <div>
-              <h4>Lorem Company Buea</h4>
-              <p>2016-2018</p>
-            </div>
-            <div>
-              <h4>Senior Graphic Designer</h4>
-              <p>amet, consectetur adipiscing adipiscing elit. Lorem ipsum dolor</p>
-            </div>
-            <div>
-              <h4>Lorem Company Buea</h4>
-              <p>2016-2018</p>
-            </div>
-            <div>
-              <h4>Senior Graphic Designer</h4>
-              <p>amet, consectetur adipiscing adipiscing elit. Lorem ipsum dolor</p>
-            </div>
-            <div>
-              <h4>Lorem Company Buea</h4>
-              <p>2016-2018</p>
-            </div>
-            <div>
-              <h4>Senior Graphic Designer</h4>
-              <p>amet, consectetur adipiscing adipiscing elit. Lorem ipsum dolor</p>
-            </div>
-          </div>
-          <div class="hobbies-container">
-            <h2 class="about-designer">Hobbies</h2>
-            <div class="line-container">
-              <div class="line-inner"></div>
-            </div>
             <div class="hobbies-container">
-              <h3 class="hobbies">Art</h3>
-              <h3 class="hobbies">Travelling</h3>
-              <h3 class="hobbies">Photography</h3>
-              <h3 class="hobbies">Reading</h3>
-              <h3 class="hobbies">Sports</h3>
-              <h3 class="hobbies">Movies</h3>
+              <h2 class="right-heading">Hobbies</h2>
+              <div class="hobbies-container-inner">
+                <h3>Art</h3>
+                <h3>Travelling</h3>
+                <h3>Photography</h3>
+                <h3>Reading</h3>
+                <h3>Sports</h3>
+                <h3>Movies</h3>
+              </div>
             </div>
           </div>
         </div>
+
+
       </div>
     </div>
   </section>
 
   <section id="contact">
     <div class="wrapper">
-        <div class="social">
-            <h3>Get in touch</h3>
-            <div>
-                <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                <a href="#"><i class="fas fa-basketball-ball"></i></a>
-                <a href="#"><i class="fab fa-whatsapp-square"></i></a>
-                <a href="#"><i class="fab fa-instagram"></i></a>
-                <a href="#"><i class="fab fa-facebook-square"></i></a>
-            </div>
+      <div class="social">
+        <h3>Get in touch</h3>
+        <div>
+          <a href="#"><i class="fab fa-linkedin-in"></i></a>
+          <a href="#"><i class="fas fa-basketball-ball"></i></a>
+          <a href="#"><i class="fab fa-whatsapp-square"></i></a>
+          <a href="#"><i class="fab fa-instagram"></i></a>
+          <a href="#"><i class="fab fa-facebook-square"></i></a>
+        </div>
+
+      </div>
+      <hr>
+      <footer>
+        <div class="copyright">
+          <p class="copyright">© Copyright <span class="year"></span>|<a href="/">Creative Lite Studios</a>| Privacy</p>
+          <p class="designed-by"><i class="fas fa-code"></i> with <i class="fas fa-heart"></i> by O.J. Tabi</p>
 
         </div>
-        <hr>
-        <footer>
-            <div class="copyright">
-                <p class="copyright">© Copyright <span class="year"></span>|<a href="/">Creative Lite Studios</a>| Privacy</p>
-                <p class="designed-by"><i class="fas fa-code"></i> with <i class="fas fa-heart"></i> by O.J. Tabi</p>
-
-            </div>
-        </footer>
+      </footer>
 
     </div>
 
-</section>
+  </section>
 
 
 
