--- a/public/Css/styles.css
+++ b/public/Css/styles.css
@@ -22,7 +22,7 @@ body {
 }
 
 section {
-    padding: 3rem 2rem;
+    padding: 3rem 1.5rem;
     color: white;
 }
 
@@ -617,27 +617,51 @@ a.work:hover {
 
 /* resume */
 #resume {
-    padding: 6rem 2rem;
+    padding: 6rem 1.5rem;
     position: relative;
     text-align: left;
     background-color: var(--mainGrey);
 }
+.resume-wrapper {
+    margin-left: auto;
+    margin-right: auto;
+    width: 90vw;
+    max-width: 1370px;
+    position: relative;
+}
+.go-back{
+    margin: 0 0 1.3rem;
+    padding: 0.5rem 1.4rem;
+    color: var(--primaryColor);
+    background-color: var(--mainWhite);
+    border: none;
+    outline: none;
+    cursor: pointer;
+    box-shadow: 2px 2px 1px #ccc;
+    font-size: 1rem;
+    text-transform: capitalize;
+    transition: var(--mainTransition);
+}
+.go-back:hover{
+    color: var(--mainWhite);
+    background-color: var(--mainBlack);
+    box-shadow: none;
+}
+
 
 .resume-grid {
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: repeat(2, 1fr);
-    column-gap: 1rem;
-    row-gap: 1rem;
+    display: flex;
+    justify-content: space-between;
 }
 .resume-bio, .education, .work-experience{
     box-shadow: 0 2px 2px #ccc;
 }
 
 .resume-bio {
-    grid-column: 1/3;
-    grid-row: 1/3;
+    flex-basis: 38%;
     background-color: var(--mainWhite);
+    height: max-content;
+    border-radius: 10px;
 }
 
 .resume-bio .image {
@@ -645,9 +669,9 @@ a.work:hover {
     background-size: contain;
     height: 300px;
     width: 100%;
-    border-radius: 10px 0 0 0;
     position: relative;
     overflow: hidden;
+    border-radius: 10px 10px 0 0;
     transition: transform 0.5s ease;
 
 }
@@ -798,22 +822,81 @@ a.work:hover {
     font-size: 1.2rem;
 }
 
-
+.eduandwork{
+    display: flex;
+    flex-direction: column;
+    flex-basis: 61%;
+    justify-content: space-between;
+    row-gap: 0.8rem;
+}
 
 .work-experience, .education{
-    padding: 1.4rem;
+    padding: 1.8rem;
     color: var(--primaryColor);
     background-color: var(--mainWhite);
+    font-weight: 400;
+    border-radius: 10px;
 }
 .work-experience{
-    grid-column: 3/6;
-    grid-row: 1/2;
     position: relative;
     
 }
-.education{
-    grid-column: 3/6;
-    grid-row: 2/3;
+.right-heading{
+    font-size: 2rem;
+    margin-bottom: 2rem;
+    color: var(--mainBlack);
+    text-transform: capitalize;
+}
+.right-heading i{
+    color: var(--secondaryColor);
+    margin-right: 1rem;
+}
+.inner-content h4{
+    font-size: 1.3rem;
+    color: var(--mainBlack);
+    margin-bottom: 0.8rem;
+}
+
+.inner-content h5{
+    font-size: 1.2rem;
+    color: var(--secondaryColor);
+    margin-bottom: 1rem;
+}
+.inner-content h5 i{
+    margin-right: 1rem;
+}
+.inner-content p{
+    color: var(--primaryColor);
+    line-height: 1.4;
+    font-size: 1.1rem;
+    margin-bottom: 1rem;
+
+}
+.inner-content hr{
+    margin-bottom: 1.2rem;
+    color: rgba(255, 255, 255, 0.5);
+}
+
+.hobbies-container-inner{
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    padding: 1rem;
+}
+
+.hobbies-container-inner h3{
+    position: relative
+}
+.hobbies-container-inner h3::after{
+    position: absolute;
+    content: "";
+    top: 50%;
+    transform:translateY(-50%);
+    left: -1rem;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    background-color: var(--secondaryColor);
 }
 
 #footer {
