--- a/views/resume.ejs
+++ b/views/resume.ejs
@@ -216,7 +216,7 @@
               <div>
                 <h4>Senior Graphic Designer / Lorem Company Buea</h4>
                 <h5 class="time-frame"><i class="fas fa-calendar-alt"></i>2016-2018</h5>
-                <p>Masters in Microbiology</p>
+                <p>Bachelor's in Microbiology</p>
                 <hr>
               </div>
               <div>
