improve logo page ui design

--- a/views/logo.ejs
+++ b/views/logo.ejs
@@ -12,10 +12,10 @@
                 </div>
             </div>
             <div class="logo-header-grid">
-                <div class="normal-border"><img src = "/images/bookworld.png" alt="logo"></div>
-                <div class="curved-border"><img src = "/images/logo1.jpg" alt="logo"></div>
-                <div class="curved-border"><img src = "/images/logo2.jpeg" alt="logo"></div>
-                <div class="normal-border"><img src = "/images/SIMBS Logo.png" alt="logo"></div>
+                <div><img src = "/images/bookworld.png" alt="logo"></div>
+                <div><img src = "/images/logo1.jpg" alt="logo"></div>
+                <div><img src = "/images/logo2.jpeg" alt="logo"></div>
+                <div><img src = "/images/SIMBS Logo.png" alt="logo"></div>
             </div>
             
         </div>
