--- a/public/Css/styles.css
+++ b/public/Css/styles.css
@@ -1746,12 +1746,14 @@ footer {
     position: relative;
     width: 100%;
     padding-left: 2rem;
+    
+    
 }
 
 .logo-header-grid div{
     background-color: var(--mainWhite);
     position: relative;
-    
+    transform: rotate(30deg);
 }
 
 .logo-header-grid img{
@@ -1761,10 +1763,4 @@ footer {
     width: 100%;
     object-fit: contain;
     
-}
-.normal-border{
-    border-radius: 55px 15px 45px 10px;
-}
-.curved-border{
-    border-radius:  15px 45px 45px 45px ;
 }
