--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -40,11 +40,11 @@
                 </a>
             </div>
             <ul class="nav_links">
-                <li class="nav_link active header"><a href="#header">Home</a></li>
-                <li class="nav_link about-me"><a href="#about-me">About</a></li>
-                <li class="nav_link portfolio"><a href="#portfolio">Portfolio</a></li>
+                <li class="nav_link active header"><a href="/">Home</a></li>
+                <li class="nav_link about-me"><a href="/#about-me">About</a></li>
+                <li class="nav_link portfolio"><a href="/#portfolio">Portfolio</a></li>
                 <li class="nav_link resume"><a href="/resume">Resume</a></li>
-                <li class="nav_link contact"><a href="#contact">Contact</a></li>
+                <li class="nav_link contact"><a href="/#contact">Contact</a></li>
             </ul>
             <div class="burger">
                 <div class="line1"></div>
